argo/k8s-test/argo-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: nginx
        name: guestbook-ui
        securityContext:
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 80
